--- a/Frontend/src/App.scss
+++ b/Frontend/src/App.scss
@@ -1,5 +1,6 @@
 h1 {
     text-align: center;
+    padding: 1rem;
 }
 
 body {
@@ -19,7 +20,7 @@ body {
 .body {
     & > div {
         margin: auto;
-        width: 50%;
+        width: 70%;
         padding: 10px;
     }
 }
@@ -59,6 +60,7 @@ a:hover {
 }
 
 a {
+    color: black;
     background-color: white;
     text-decoration: none;
     font-weight: 700;
@@ -83,5 +85,16 @@ a {
 
 .article-preview {
     width: 50%;
+    padding: 1rem;
     text-align: center;
+}
+
+.clickable-preview:hover {
+    cursor: pointer;
+    color: blueviolet;
+}
+
+.clickable-preview {
+    width: 100%;
+    height: 100%;
 }
