--- a/Frontend/src/App.scss
+++ b/Frontend/src/App.scss
@@ -20,7 +20,7 @@ body {
 .body {
     & > div {
         margin: auto;
-        width: 70%;
+        width: 100%;
         padding: 10px;
     }
 }
@@ -31,10 +31,11 @@ body {
 
 nav {
     position: absolute;
-    width: 100%;
+    width: 200%;
     left: 0;
     top: 0;
     padding: .1rem;
+    padding-left: 10rem;
     background-color: rgb(0, 0, 121);
     color: white;
 }
@@ -46,11 +47,13 @@ nav {
 
 .nav-item {
     margin: .5rem;
-    margin-right: 1rem;
-    margin-left: 1rem;
     padding: .5rem;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+}
+
+.nav-right {
+    margin-left: 20%;
 }
 
 a:hover {
